<resources>
    <string name="app_name">HobbyHouse</string>
    <string name="welcome_text">Welcome to \nHobbyHouse!</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="forgotpassword">Forgotten your password?:</string>
    <string name="homepage">Upcoming Events:</string>
    <string name="homepage_title">Homepage🏠</string>
    <string name="calendar_title">Calendar📆</string>
    <string name="event1"><b>Now That\'s What I Call a Running Club</b>\n\n<b>New Event:</b> \nAdvanced Session Monday 05/05 at 17:15</string>
    <string name="event2"><b>On The Fence Fencing Club</b>\n\n<b>Cancelled Event:</b> \nThursday 03/05 at 19:00</string>
    <string name="event3"><b>Partick Thistle Supporters Club</b>\n\n<b>Event Reminder:</b> \nHome Match - Saturday 12/05 15:00</string>
    <string name="todays_events"><b>Today\'s Events:</b>\n\n You have no events today.</string>
    <string name="interest_finder_title">Interest Finder🔍</string>
    <string name="messages_title">Messages📨</string>
    <string name="my_profile_title">My Profile🧑</string>
    <string name="my_interests_title">My Interests💖</string>
    <string name="message1"><b>Marty Johnstone</b>\n\nSounds good, I\'m looking forward to the meetup.</string>
    <string name="message2"><b>Melissa Barnes</b>\n\nSorry, I won\'t be able to make it this week :(</string>
    <string name="message_hint">Hint💡: Click on a message above to expand the conversation</string>
    <string name="marty_chat_title">Marty Johnstone📨</string>
    <string name="user_profile_title">Brock Oliver</string>
    <string name="user_profile_info"></string>
    <string name="melissa_chat_title">Melissa Barnes📨</string>
    <string name="marty_chat_blurb">You and Marty are both part of the Partick Thistle Supporters Club</string>
    <string name="melissa_chat_blurb">You and Melissa are both part of Now That\'s What I Call a Running Club</string>
    <string name="group_header1">Now That\'s What \nI Call a Running Club</string>
    <string name="group_header2">Partick Thistle \nSupporters Club</string>
    <string name="melissa_message_1">Hey, are you coming along tonight?</string>
    <string name="account_type_title">I am a...</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="title_activity_new_event">new_event</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="partick_page_title">Partick Thistle Supporters Club⚽</string>
    <string name="settings_title">Settings⚙️</string>

</resources>