<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".messages_main">

    <TextView
        android:id="@+id/group_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_header2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/group_header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_header1"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/melissa_chat"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/message2"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marty_chat" />

    <Button
        android:id="@+id/marty_chat"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:text="@string/message1"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_finder_title" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="205dp"
        android:layout_height="84dp"
        android:src="@drawable/hobby_house_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/interest_finder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/my_interests_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/menu_bar"
        android:src="@drawable/heart_with_circles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/interest_button" />

    <ImageButton
        android:id="@+id/interest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/menu_bar"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_button" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/menu_bar"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/messages_button" />

    <ImageButton
        android:id="@+id/messages_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/menu_bar"
        android:src="@drawable/messenger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/my_account_button" />

    <ImageButton
        android:id="@+id/my_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/menu_bar"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/menu_bar"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="112dp"
        android:layout_height="120dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintEnd_toStartOf="@+id/marty_chat"
        app:layout_constraintTop_toTopOf="@+id/marty_chat"
        app:srcCompat="@drawable/not_so_happy_man_1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="109dp"
        android:layout_height="103dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/melissa_chat"
        app:layout_constraintTop_toTopOf="@+id/melissa_chat"
        app:srcCompat="@drawable/happy_woman_1" />

    <TextView
        android:id="@+id/message_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/message_hint"
        app:layout_constraintBottom_toTopOf="@+id/home_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_finder_title"
        app:srcCompat="@drawable/running_square_modified" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/kingsley_modified" />

</androidx.constraintlayout.widget.ConstraintLayout>